# JusticeAI

./: .gitignore  BUG_CONTEXT.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CURRENT_ARCHITECTURE.md  LICENSE  README.md  SECURITY.md  SUSTAINABILITY.md  USABILITY_REPORT.md  package-lock.json  package.json  research_query.md  trifold.html
.github/workflows/: ci.yml
Benchmarking/Documents/dekalb_gardening_benchmark_documents/: 01_community_garden_maintenance_services_agreement.txt  02_seed_supplier_confidentiality_and_trial_data_agreement.txt  03_landscape_and_irrigation_contractor_agreement.txt  04_vacant_lot_community_garden_use_agreement.txt  05_deposition_of_garden_program_coordinator.txt  06_deposition_of_property_owner_near_garden_site.txt  07_volunteer_witness_affidavit.txt  08_complaint_regarding_damage_to_adjacent_property.txt  09_motion_for_preliminary_relief_concerning_garden_site_access.txt  10_dekalb_community_garden_safety_and_volunteer_procedures_manual.txt
Benchmarking/Scoring_Data/: dekalb_gardening_benchmark_scoring_sheet.xlsx
Benchmarking/Scoring_Instructions/: dekalb_gardening_benchmark_prompts_and_answer_key.txt
app/: package.json  tailwind.config.ts  tsconfig.vite.json  tsconfig.web.json  vite.config.ts  vitest.config.ts
app/src-tauri/: Cargo.toml  EVAL_SYSTEM_DESIGN.md  build.rs  tauri.conf.json
app/src-tauri/.cargo/: config.toml
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: assertions.rs  grading.rs  lib.rs  pipeline.rs  state.rs
app/src-tauri/src/commands/: doc_parser.rs  mod.rs  ollama.rs  rag.rs
app/src-tauri/tests/: pipeline_integration.rs
app/src-tauri/tests/fixtures/: benchmark_modes_report.json  eval.json  eval_practice_areas.json  extended_detail.json  generate_practice_area_pdfs.py
app/src/main/: index.ts
app/src/main/services/: ragPipeline.ts
app/src/renderer/: index.html
app/src/renderer/src/: App.tsx  api.ts  globals.css  main.tsx
app/src/renderer/src/__tests__/: api.test.ts  citationDedup.test.ts  featureAB.test.tsx  makeSessionName.test.ts
app/src/renderer/src/components/: ChatInterface.tsx  CommandPalette.tsx  ContextPanel.tsx  (+13 more)
docs/: CONTRIBUTING.md  INSTALLATION.md  QUICK_START_GUIDE.txt  TECHNICAL_DOCUMENTATION.md  USER_GUIDE.md
docs/slides/: before_after.html  demo_time.html  roadmap.html
shared/src/: types.ts
website/app/: page.tsx
website/app/changelog/: page.tsx
website/app/components/: BentoCapabilities.tsx  Changelog.tsx  Download.tsx  FAQ.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  LampCTA.tsx  Navbar.tsx  Rubric.tsx
website/components/ui/: lamp.tsx
(+3 files in other folders)
