[package]
name = "justice-ai"
version = "2.0.0"
description = "Justice AI — Private Legal Research Desktop App"
authors = ["Justice AI"]
edition = "2021"
rust-version = "1.77.2"
default-run = "justice-ai"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "harness"
path = "src/bin/harness.rs"

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
tauri = { version = "2.10.0", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
lopdf = "0.32"
pdf-extract = "0.10"
pdf_oxide = "0.3"
zip = "2"
roxmltree = "0.19"
log = "0.4"
tauri-plugin-log = "2"
fastembed = "4"
regex = "1"
csv = "1.3"
mailparse = "0.15"
html2text = "0.12"
calamine = "0.26"
ocrs = "0.9"
rten = "0.13"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "tiff", "webp"] }
chrono = "0.4.44"
rayon = "1.10"
blake3 = "1"
bincode = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem"] }

[target.'cfg(target_os = "macos")'.dependencies]
llama-cpp-2 = { version = "0.1", features = ["metal"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
llama-cpp-2 = { version = "0.1", features = ["vulkan"] }

[profile.release]
codegen-units = 4   # reduce peak memory vs default lto=thin
opt-level = 3
